@@ -13,6 +13,10 @@ http://svn.edgewall.org/repos/genshi/tags/0.5.0/
    which allow matching against regular expressions.
  * Support for Python code blocks in templates can now be disabled
    (ticket #123).
+ * Includes are now processed when the template is parsed if possible, but
+   only if the template loader is not set to do automatic reloading. Included
+   templates are basically inlined into the including template, which can
+   speed up rendering of that template a bit.
 
 
 Version 0.4.3
